fix alignment

--- a/wp-content/themes/earthdance_17/css/global/images.styl
+++ b/wp-content/themes/earthdance_17/css/global/images.styl
@@ -23,7 +23,7 @@ img, iframe, embed
   border 10px solid fog
 
 .alignright
-  float left
+  float right
   width 50%
   margin 1rem 0 1rem 1rem
   border 10px solid fog
